# CMakeLearning

CMakeLearning/: CMakeLists.txt  main.cpp
CMakeLearning/PowerManager/: CMakeLists.txt  powerMgr.cpp  powerMgr.h
CMakeLearning/PowerManager/SystemPower/: systemPowerInterface.h
CMakeLearning/lib/shareLib/: antennaMgr.cpp  antennaMgr.h
CMakeLearning/lib/staticLib/: wifiMgr.cpp  wifiMgr.h
